# OpenADE

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PARTS.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS_AND_REST_IMPLEMENTATION_PLAN.md  README.md  STATUS_AND_PLAN.md  package.json
.claude/: launch.json
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/db/: migrations.go  seed.go  sqlite.go
backend/internal/handlers/: agents.go  commands.go  conversations.go  health.go  mcp_servers.go  memory.go  middleware.go  objectives.go  providers.go  response.go  runs.go  schedules.go  server.go  tasks.go
backend/internal/llm/: adapter.go  openai.go
backend/internal/mcp/: client.go
backend/internal/model/: types.go
backend/internal/secrets/: provider.go
backend/internal/services/: agent_service.go  command_service.go  conversation_service.go  mcp_server_service.go  memory_service.go  objective_service.go  provider_service.go  run_service.go  scheduler_service.go  task_service.go  template.go
docs/: ARCHITECTURE.md  BEHAVIOR_LAYER_IMPLEMENTATION_PLAN.md  FIRST_30_MINUTES.md  FIRST_WORKFLOW.md  ROOM_PILOT_APP_BLUEPRINT.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mcp-docs/: MCP_Complete_Reference.md  MCP_GitHub_DeepDive.md
scripts/: backend.sh  dev.sh  frontend.sh  healthcheck.sh  smoke.sh
scripts/fixtures/: movie-picker-demo.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+30 files in other folders)
