[package]
name = "open-ade"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "open_ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
